# DeepFilterNet-Numpy2

DeepFilterNet/: pyproject.toml
pyDF/: Cargo.toml  pyproject.toml
pyDF-data/: Cargo.toml  pyproject.toml
pyDF/src/: lib.rs
